Fix JSON test formatting and update DifferTest