@@ -1,21 +1,15 @@
-
-
 import org.junit.jupiter.api.Test;
-
 import java.io.IOException;
-
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.nio.file.Path;
-
-import static java.nio.file.Files.readString;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
 
-
 public class AppTest {
-
     @Test
     void test() throws IOException {
-        String file1 = readString(Path.of("src/main/resources/file1.json"));
-        String file2 = readString(Path.of("src/main/resources/file2.json"));
+        String file1 = Files.readString(Paths.get("build", "resources", "test", "file1.json"));
+        String file2 = Files.readString(Paths.get("build", "resources", "test", "file2.json"));
         assertNotEquals(file1, file2);
     }
 }
